--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/recrutamento
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.base-url=jdbc:postgresql://localhost:5432/
+spring.datasource.database-name=recrutamento
 
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
