--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
             <version>2.6.0</version>
         </dependency>
 
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-jdbc</artifactId>
+        <version>3.3.2</version>
+    </dependency>
+
     </dependencies>
     <build>
         <plugins>
